# bayespreg

./: .coveragerc  .gitignore  README.md  codecov.yml  environment.yml  pyproject.toml
.github/workflows/: spec1.yml  unittests.yml
bayespecon/: __init__.py  __init__.pyi  _jax_dispatch.py  _numba_dispatch.py  diagnostics.py  diagnostics_bayesfactor.py  graph.py  logdet.py  ops.py
bayespecon/dgp/: __init__.py  __init__.pyi  cross_sectional.py  flows.py  nonlinear.py  panel_dynamic.py  panel_fe.py  panel_re.py  panel_tobit.py  utils.py
bayespecon/diagnostics/: __init__.py  __init__.pyi  _decision_trees.py  bayesfactor.py  bayesian_lmtests.py  spatial_effects.py
bayespecon/models/: __init__.py  __init__.pyi  _sampler.py  base.py  flow.py  flow_panel.py  ols.py  panel.py  panel_base.py  panel_dynamic.py  panel_re.py  panel_tobit.py  sar.py  sar_negbin.py  sdem.py  sdm.py  sem.py  slx.py  spatial_probit.py  tobit.py
bayespecon/stats/: __init__.py  core.py  panel.py
bayespecon/tests/: conftest.py  fogli_veldkamp_replication_bayespecon.ipynb  helpers.py  test_base_model_validation.py  test_bayesfactor_edgecases.py  test_bayesian_diagnostics.py  test_bayesian_lm_correctness.py  test_bridge_sampling.py  test_crosssectional.py  test_decision_trees.py  test_dgp_module.py  test_dgp_utils_edgecases.py  test_diagnostic_wiring.py  test_flow_dgp_distance.py  test_flow_models.py  test_flow_negbin_models.py  test_flow_panel_models.py  test_graph_module.py  test_log_likelihood_fit.py  test_logdet_edgecases.py  test_logdet_methods.py  test_model_spec_tests_fast.py  test_new_lm_tests.py  test_ops_jax.py  test_ops_module.py  test_panel_base_fast.py  test_panel_diagnostic_behaviors.py  test_panel_dynamic_builds_fast.py  test_panel_dynamic_fast.py  test_panel_dynamic_recovery.py  test_panel_fe.py  test_panel_model_methods_fast.py  test_panel_re.py  test_panel_re_methods_fast.py  test_panel_re_tobit_fast.py  test_panel_tobit.py  test_robust_models.py  test_sampler_logdet_edgecases.py  test_sar_negbin_fast.py  test_sem_flow.py  (+7 more)
ci/: 312-latest.yml  312-oldest.yml  313-latest.yml  314-dev.yml  314-latest.yml
dev/: api.html  genindex.html  index.html  installation.html  models.html  objects.inv  references.html  searchindex.js  sitemap.xml
dev/_sources/: api.rst.txt  index.md.txt  models.md.txt
dev/_static/: documentation_options.js  references.bib
dev/user-guide/: bayesian_lmtests.html  cross_sectional_spreg_comparison.html  faithfulness_bayespecon.html  flow_models.html  jgsy2024_replication_bayespecon.html  logdet_profiling.html  nonlinear_models.html  nonlinear_panel_models.html  panel_flow_models.html  pedagogical_panel_models.html  pedagogical_spatial_models.html  sampling_backend_profiling.html  spatial_diagnostics_recovery.html
docs/: Makefile
docs/source/: api.rst  conf.py  index.md  installation.md  models.md  references.md
tests/: helpers.py  test_crosssectional.py  test_dgp_module.py  test_dynamic_panel_models.py  test_logdet_methods.py  test_panel_fe.py  test_panel_re.py  test_panel_tobit.py  test_pymc_model_attribute.py  test_spatial_effects_formulas.py  test_spatial_probit.py  test_tobit.py
(+30 files in other folders)
