[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "bayespecon"
dynamic = ["version"]
description = "Bayesian spatial econometric regression models in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymc",
    "pytensor",
    "arviz",
    "libpysal",
    "formulaic",
    "numpy",
    "scipy",
    "pandas",
]


[tool.setuptools.packages.find]
include = ["bayespecon", "bayespecon.*"]

[tool.pytest.ini_options]
testpaths = ["bayespecon/tests"]
addopts = "-m 'not slow'"   # run fast tests by default; use -m slow or -m '' to include all
markers = [
    "slow: marks tests as slow (MCMC parameter recovery — deselected by default)",
    "recovery: marks parameter recovery tests (fit model, assert posterior ≈ true params)",
]

[tool.coverage.run]
source = ["bayespecon"]
omit = [
    "bayespecon/tests/*",
    "*/tests/*",
]

[tool.coverage.report]
omit = [
    "bayespecon/tests/*",
    "*/tests/*",
]

