[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "bayespecon"
dynamic = ["version"]
description = "Bayesian spatial econometric regression models in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymc",
    "pytensor",
    "arviz",
    "libpysal",
    "formulaic",
    "lazy_loader",
    "numpy",
    "scipy",
    "pandas",
]

[project.optional-dependencies]
viz = ["graphviz"]


[tool.setuptools.packages.find]
include = ["bayespecon", "bayespecon.*"]

[tool.setuptools.package-data]
bayespecon = ["py.typed", "*.pyi", "**/*.pyi"]

[tool.pytest.ini_options]
testpaths = ["bayespecon/tests"]
addopts = "-m 'not slow'"   # run fast tests by default; use -m slow or -m '' to include all
markers = [
    "slow: marks tests as slow (MCMC parameter recovery — deselected by default)",
    "recovery: marks parameter recovery tests (fit model, assert posterior ≈ true params)",
    "requires_jax: marks tests that activate a JAX-backed NUTS sampler (numpyro/blackjax) — auto-skipped on Windows",
]

[tool.coverage.run]
source = ["bayespecon"]
omit = [
    "bayespecon/tests/*",
    "*/tests/*",
]

[tool.coverage.report]
omit = [
    "bayespecon/tests/*",
    "*/tests/*",
]

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = [
    "docs/build",
    "reference",
    "bayespecon.egg-info",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = [
    "E501",  # line too long — handled by formatter; remaining are long string literals
    "E741",  # ambiguous variable name — math notation (l, I, O) is intentional
    "E402",  # module-level import not at top — used for conditional/optional imports
]
extend-select = ["I"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"__init__.pyi" = ["F401", "F403"]
"bayespecon/tests/*" = ["F401", "F811", "F841"]

[tool.ruff.format]
docstring-code-format = false

